--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+body {
+  background-color: rgb(242, 233, 220);
+  color: black;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +44,64 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.list {
+  display: flex;
+  justify-content: flex-start;
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+form {
+  border: solid 1px rgb(227, 219, 207);
+  border-radius: 40px;
+  padding: 5px 20px;
+  box-shadow: 0px 0px 20px hsla(30, 100%, 30%, 0.1);
+  transition: all ease 0.2s;
+}
+
+form:hover {
+  border-color: white;
+}
+
+li {
+  border: solid #888 1px;
+  padding: 8px;
+  margin-bottom: 5px;
+  border-radius: 15px;
+  transition: all ease 0.3s;
+  box-shadow: 1px 1px 3px hsla(30, 100%, 30%, 0.218);
+}
+
+li:hover {
+  background-color: rgb(255, 244, 141);
+  box-shadow: 1px 1px 10px hsla(30, 100%, 30%, 0.434);
+}
+
+#name {
+  min-height: 30px;
+  width: 250px;
+  border-radius: 5px;
+  border: none;
+  margin-left: 10px;
+}
+
+#isForGoodWeather {
+  align-self: center;
+  margin: 10px;
+}
+
+button {
+  margin-bottom: 10px;
+}
+
+section {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: flex-start;
 }
