--- a/src/App.css
+++ b/src/App.css
@@ -27,15 +27,7 @@ body {
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
-  color: var(--dark);
-}
-
-.badWeather {
-  background: linear-gradient(
-    0deg,
-    rgb(62, 68, 76) 0%,
-    rgb(154, 154, 154) 100%
-  );
+  color: var(--notSoDark);
 }
 
 .logo {
@@ -91,7 +83,7 @@ form {
   padding: 5px 20px;
   box-shadow: 0px 0px 20px hsla(30, 100%, 30%, 0.1);
   transition: all ease 0.2s;
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(10px);
 }
 
 form:hover {
@@ -109,6 +101,7 @@ li {
   border: solid var(--whiteTransparent) 1px;
   background-color: var(--whiteTransparent);
   box-shadow: 1px 1px 3px var(--lightShadow);
+  backdrop-filter: blur(8px);
 }
 
 li:hover {
@@ -124,6 +117,7 @@ li:hover {
   border-radius: 5px;
   border: none;
   margin-left: 10px;
+  padding: 0;
 }
 
 #isForGoodWeather {
