--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,8 @@ body {
 form {
   border: solid 1px var(--whiteTransparent);
   background-color: var(--whiteTransparent);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   border-radius: 30px;
   padding: 5px 20px;
   box-shadow: 0px 0px 20px hsla(30, 100%, 30%, 0.1);
