--- a/src/App.css
+++ b/src/App.css
@@ -193,3 +193,34 @@ section {
   cursor: pointer;
   overflow: hidden;
 }
+
+nav {
+  padding: 5px;
+  border-radius: 15px;
+  transition: 0.3s ease-out;
+  background-color: var(--whiteTransparent);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(8px) brightness(1.2);
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.locationBtn {
+  background-color: transparent;
+  padding: 0 5px;
+  margin: 0 2px;
+  color: var(--white);
+  font-variant-caps: all-petite-caps;
+  transition: 0.3s ease-out;
+}
+
+.locationBtn:hover {
+  background-color: var(--whiteTransparent);
+  border-color: var(--whiteTransparent);
+  box-shadow: 1px 1px 15px var(--darkShadow);
+}
+
+.locationBtn:focus {
+  background-color: var(--whitenotSoTransparent);
+  color: var(--notSoDark);
+  border: none;
+}
