--- a/src/App.css
+++ b/src/App.css
@@ -214,16 +214,19 @@ nav {
   transition: 0.3s ease-out;
 }
 
-.locationBtn:hover {
-  /* background-color: var(--whiteTransparent); */
-  border-color: transparent;
-  /* box-shadow: 1px 1px 15px var(--darkShadow); */
+.locationBtn--focus {
+  background-color: transparent;
+  padding: 0 3px;
+  margin: 0 2px;
+  font-variant-caps: all-petite-caps;
+  transition: 0.3s ease-out;
+  color: var(--darkTransparent);
   font-size: 17px;
+  border-color: transparent;
 }
 
-.locationBtn--focus {
-  /* background-color: var(--whitenotSoTransparent); */
-  /* border: none; */
-  color: var(--darkTransparent);
+.locationBtn:hover,
+.locationBtn--focus:hover {
+  border-color: transparent;
   font-size: 17px;
 }
